squash bugs

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,24 +1,1 @@
-.container {
-  padding: 0 2rem;
-}
 
-.section {
-  margin-left: 40%;
-  font-size: 3rem;
-}
-
-.button {
-  margin-left: 45%;
-  color: rgb(10, 102, 194);
-  border: 1px solid rgb(10, 102, 194);
-  padding: 10px 22px;
-  background-color: #fff;
-  outline: none;
-  cursor: pointer;
-  transition: border-width 0.15s, background-color 0.15s;
-}
-
-.button:hover {
-  border-width: 2px;
-  background-color: rgb(226, 240, 254);
-}
